using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class Constants 
{
    public static string PLAYER_IDLE_ANIM = "Idle";
    public static string PLAYER_THINKING_ANIM = "Thinking";
    public static string PLAYER_UP_ANIM = "Up";
    public static string PLAYER_DOWN_ANIM = "Down";
    public static string PLAYER_LEFT_ANIM = "Left";
    public static string PLAYER_RIGHT_ANIM = "Right";
    public static string PLAYER_WIN_ANIM = "Win";
    public static string PLAYER_LOSE_ANIM = "Lose";

    public static string TEACHER_IDLE_ANIM = "Idle";
    public static string TEACHER_THINKING_ANIM = "Thinking";
    public static string TEACHER_WIN_ANIM = "Win";
    public static string TEACHER_LOSE_ANIM = "Lose";
}
